--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+.card{
+  border : 1px solid black ; 
+  border-radius: 8px;
+  padding:20px;
+  margin:10px;
+  text-align: center;
+  max-width: 250px;
+  display: inline-block;
+  
+background-color: #cbe5ed;
+background-image: linear-gradient(315deg, #757e81 0%, #343434 74%);
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.profilePic{
+  max-width: 100%;
+  height: auto;
+  border-radius: 20%;
+}
+
+.card-title{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin: 12px;
+}
+
+.card-text{
+  color: rgb(118, 118, 118);
+}
+
+/* STUDENT */
+.student{
+  border: 2px solid rgb(51, 7, 7);
+
 }
